--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-body {
-  padding: 0;
-  margin: 0;
+html, body, #root {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
