--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-html, body, #root {
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+.scene {
   position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  z-index: -1;
 }
