--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html, body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  background: #0086CF;
 }
 
 .scene {
@@ -14,5 +15,4 @@ html, body {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
 }
